# recipe

./: .gitignore  pyproject.toml
recipe_project/: settings.py  urls.py
recipes/: models.py  serializers.py  urls.py  views.py
recipes/migrations/: 0001_initial.py
